# crud_app_01_flask

./: .env  .gitignore  .sesskey  app.py  check_data.py  check_manifest.py  check_routes.py  config.py  convert_models.bat  database.py  db.py  generate_relationship_tree.py  generate_test_data.py  generate_test_data.py.bak  helper_functions.py  init_countries.py  init_db.py  init_test_data.py  install.bat  inventory.db  manifest.db  model_config.py  model_generator.py  models.py  people.db  pyproject.toml  readme.md  repopulate_db.py  requirements.txt  run_tests.bat  schema.sql  stuffToDoList.md  test_foreign_key_names.py  test_generator.py  test_incremental_search.py  test_manifest_list.py  test_manifest_relationships.py  test_manifest_search.py  verify_data_quality.py  verify_sequence_1.py
generated_models/: __init__.py  client.py  container.py  containerhistory.py  containerstatus.py  country.py  leg.py  lineitem.py  manifest.py  packtype.py  port.py  portpair.py  rate.py  shippingcompany.py  user.py  vessel.py  voyage.py
generated_routes/: __init__.py  client_routes.py  commodity_routes.py  container_routes.py  containerhistory_routes.py  containerstatus_routes.py  country_routes.py  leg_routes.py  lineitem_routes.py  manifest_routes.py  packtype_routes.py  port_routes.py  portpair_routes.py  rate_routes.py  shippingcompany_routes.py  user_routes.py  vessel_routes.py  voyage_routes.py
generator/: model_summary.json
generators/: model_generator.py  test_generator.py
models/: __init__.py  models.py
routes/: vessel_ops.py
templates/: base.html  dashboard.html  (+7 more)
(+163 files in other folders)
