[tool.poetry]
name = "crud_app_01"
version = "0.1.0"
description = "A CRUD application using Flask, HTMX, Tailwind, and SQLite"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.1.0"
pydantic = "^1.9.0"
python-dotenv = "^0.19.0"
flask-cors = "^4.0.1"
watchdog = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"